--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   http: ^1.1.0
-  video_player: ^2.8.1
-  chewie: ^1.7.1
+  media_kit: ^1.2.6
+  media_kit_video: ^2.0.1
+  media_kit_libs_video: ^1.0.7
   shared_preferences: ^2.2.2
   provider: ^6.1.1
   cached_network_image: ^3.3.0
