--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.1.1
   sqflite: ^2.3.0
   flutter_spinkit: ^5.2.0
+  simple_pip_mode: ^1.1.0
 
 dev_dependencies:
   flutter_test:
