--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   simple_pip_mode: ^1.1.0
   flutter_android_tv_text_field: ^1.0.2
+  device_info_plus: ^12.3.0
 
 dev_dependencies:
   flutter_test:
