--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   flutter_android_tv_text_field: ^1.0.2
   device_info_plus: ^12.3.0
   cast_plus: ^2.2.0
+  m3u8_player_plus: ^1.0.3
+  video_player: ^2.10.1
+  video_player_web: ^2.4.0
 
 dev_dependencies:
   flutter_test:
